--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,9 @@
 .navbar-fixed {
   background-color: black;
 }
+.work-page {
+  background-color: black;
+}
 /* .text-on-image {
  position: absolute;
  background-color: transparent;
