--- a/src/gallery.css
+++ b/src/gallery.css
@@ -9,6 +9,7 @@
     padding: 0 12px;
     background-color: black;
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 /* .gallery .pics{
     -webkit-transition: all 350ms ease;
