--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,17 @@
     -webkit-column-width: 100%;
     -moz-column-width: 100%;
     -column-width: 100%;
-    padding: 0 12px;
+    padding: 0px 10px;
     background-color: black;
-    padding-top: 10px;
+    padding-top: 0px;
+    padding-bottom: 20px;
+}
+.bio-card {
+  margin-top: 0;
+  padding-bottom: 10px;
+}
+.card-contect {
+  padding: 0px;
 }
 /* .text-on-image {
  position: absolute;
