--- a/src/gallery.css
+++ b/src/gallery.css
@@ -1,22 +1,16 @@
 
 .gallery {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
+    webkit-column-count: 2;
+    moz-column-count: 2;
     column-count: 2;
-    -webkit-column-width: 45%;
-    -moz-column-width: 45%;
-    -column-width: 45%;
+    webkit-column-width: 45%;
+    moz-column-width: 45%;
+    column-width: 45%;
     padding: 0 12px;
     background-color: black;
     padding-top: 10px;
     padding-bottom: 10px;
 }
-/* .gallery .pics{
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease;
-    cursor: pointer;
-    margin-bottom: 12px;
-}  */
 .gallery .pics:hover{
     filter: opacity(.8)
 }
@@ -32,9 +26,9 @@
         -webkit-column-count: 1;
         -moz-column-count: 1;
         column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        -column-width: 100%;
+        webkit-column-width: 100%;
+        moz-column-width: 100%;
+        column-width: 100%;
     }
 }
 .model{
