--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,7 @@
    .welcome-image {
      background-color: transparent; 
      width:100%;
-     height:100%;
+     height:auto;
    }
    .welcome-text {
        background-color: transparent;
@@ -26,3 +26,4 @@
      color: black;
      font-weight: bolder
    }
+   
